<resources>
    <string name="app_name">Covid-19 Apps</string>
    <string name="update_kasus_corona_virus_ndi_indonesia">Update Kasus Corona Virus\ndi Indonesia</string>
    <string name="selamat_datang_di">Selamat Datang di,</string>
    <string name="terakhir_update_tanggal_19_juni_2020">Terakhir Update tanggal 19 Juni 2020</string>
    <string name="total_kasus_positif">Total Kasus Positif</string>
    <string name="meninggal">Meninggal</string>
    <string name="sembuh">Sembuh</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="tentang_aplikasi_covid_19_ninformation_data_daily">Tentang Aplikasi COVID-19\nInformation Data Daily</string>
    <string name="aplikasi_covid_19_information_data_daily_ini_berisikan_data_penduduk_di_34_provinsi_di_indonesia_yang_terjangkit_virus_covid_19_ini_grafik_perbulan_selama_virus_ini_menjajah_di_indonesia_informasi_mengenai_penanggulangan_covid_19_bantuan_untuk_penanganan_covid_19">Aplikasi COVID-19 Information Data Daily ini berisikan data penduduk di 34 Provinsi di Indonesia yang terjangkit virus COVID-19 ini. Grafik perbulan selama virus ini menjajah di Indonesia. Informasi mengenai penanggulangan covid-19. Bantuan untuk penanganan covid-19.</string>
    <string name="lanjut">LANJUT</string>
    <string name="mulai">MULAI</string>
    <string name="aplikasi_ini_dibuat_oleh">Aplikasi ini dibuat oleh :</string>
    <string name="farhan_mazario">Farhan Mazario</string>
    <string name="_21120117140005">21120117140005</string>
    <string name="alvin_elian_abiyyi">Alvin Elian Abiyyi</string>
    <string name="_21120117130051">21120117130051</string>
    <string name="wahid_dwipa_baskara">Wahid Dwipa Baskara</string>
    <string name="_21120117130042">21120117130042</string>
    <string name="grafik_kasus_corona_virus_ndi_indonesia">Grafik Kasus Corona Virus\ndi Indonesia</string>
    <string name="grafik">Grafik</string>
    <string name="lihat_data_kasus_per_bulan">Lihat Data Kasus per Bulan</string>
    <string name="informasi">Informasi</string>
    <string name="gejala_covid_19">Gejala COVID-19</string>
    <string name="demam">Demam</string>
    <string name="sakit_kepala">Sakit Kepala</string>
    <string name="flu">Flu</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="jaga_jarak_n1_2_meter">Jaga jarak\n1-2 meter</string>
    <string name="cuci_tangan_nsesering_mungkin">Cuci tangan\nsesering mungkin</string>
    <string name="selalu_gunakan_nmasker">Selalu gunakan\nmasker</string>
    <string name="sesak_nafas">Sesak Nafas</string>
    <string name="batuk_parah">Batuk Parah</string>
    <string name="sakit_tenggorokan">Sakit Tenggorokan</string>
    <string name="dki_jakarta">DKI JAKARTA</string>
    <string name="positif">Positif</string>
</resources>