<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    style="@style/Responsive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:background="@drawable/bg_btn_linear_kasus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dki_jakarta"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Compatible"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_btn_kasus">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positif"
                    android:textColor="#828282"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto" />

                <TextView
                    android:id="@+id/positif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:background="@drawable/bg_btn_kasus">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meninggal"
                    android:textColor="#828282"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto" />

                <TextView
                    android:id="@+id/meninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:background="@drawable/bg_btn_kasus">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sembuh"
                    android:textColor="#828282"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto" />

                <TextView
                    android:id="@+id/sembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
