<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bglanding"
    tools:context=".Activities.InformasiActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="96dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/informasi"
                android:textColor="@color/fontwhite"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/img_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_header_informasi"
                android:layout_marginTop="40dp"
                app:layout_constraintHorizontal_bias="1.35"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_layout_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0"
                    style="@style/Responsive"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gejala_covid_19"
                            android:textSize="18sp"
                            android:textColor="@color/bg"
                            android:fontFamily="@font/roboto_bold" />

                        <TextView
                            android:id="@+id/tv_lihat_semua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:gravity="end"
                            android:textColor="@color/bg"
                            android:text="@string/lihat_semua"
                            android:textSize="14sp" />

                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    style="@style/Responsive"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:background="@drawable/ic_demam" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/demam"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:background="@drawable/ic_sakit_kepala" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/sakit_kepala"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:background="@drawable/ic_flu" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/flu"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pencegahan"
                    android:layout_marginTop="32dp"
                    style="@style/Responsive"
                    android:textSize="18sp"
                    android:textColor="@color/bg"
                    android:fontFamily="@font/roboto_bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    style="@style/Responsive"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/ic_jaga_jarak" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:text="@string/jaga_jarak_n1_2_meter"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/ic_cuci_tangan" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/cuci_tangan_nsesering_mungkin"
                            android:gravity="center"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        android:gravity="center">

                        <LinearLayout
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:background="@drawable/bg_gejala">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/ic_pakai_masker" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/selalu_gunakan_nmasker"
                            android:gravity="center"
                            android:fontFamily="@font/roboto"
                            android:textSize="12sp"
                            android:textColor="@android:color/black" />


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="false"
        android:background="@android:color/white"
        app:itemIconTint="@drawable/bottom_navbar_selector"
        app:itemTextColor="@drawable/bottom_navbar_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>